--- a/css/babel.css
+++ b/css/babel.css
@@ -57,6 +57,12 @@
     margin: 10px; margin-top: 200px; padding: 50px; text-align: center;
 }
 
+#message{ 
+    position: relative; 
+    bottom: 10px; padding: 50px; text-align: center;
+}
+
+
 #babel_window h3 { margin: 0; padding: 0.4em; text-align: center; }
 .ui-effects-transfer { border: 2px dotted gray; }
 
