--- a/css/babel.css
+++ b/css/babel.css
@@ -1,3 +1,22 @@
+/*
+  All rights reserved 2013 Henry Hirsch
+
+  This file is part of Babel.
+
+  Babel is free software: you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation, either version 3 of the License, or
+  (at your option) any later version.
+
+  Foobar is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+
+  You should have received a copy of the GNU General Public License
+  along with Babel.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
 .ui-tooltip, .arrow:after {
     background: black;
     border: 2px solid white;
