--- a/css/babel.css
+++ b/css/babel.css
@@ -71,14 +71,14 @@
 
 #babel_window{ 
     display: none;
-    width: 600px; height: 200px; 
+    width: 800px; height: 300px; 
     position: relative; 
-    margin: 10px; margin-top: 200px; padding: 50px; text-align: center;
+    margin-top: 20px; margin: 50px; text-align: center;
 }
 
 #message{ 
     position: relative; 
-    bottom: 10px; padding: 50px; text-align: center;
+    bottom: 10px; margin: 50px; text-align: center;
 }
 
 
